Add possibility to delete get
